continuing the setting logic