@@ -35,19 +35,20 @@ object DalvikPlugin extends sbt.Plugin {
     val lib = SettingKey[File]("lib", "compiled so library folder")
     val androidData = SettingKey[File]("android-data", "location of android data where cache dex will be saved")
     val androidRoot = SettingKey[File]("android-root", "root folder of the compiled android source")
+    val options = SettingKey[Seq[String]]("options", "Options for dalvikvm")
 
   }
 
   import DalvikKeys._
 
-  def dalvikSettings: Seq[Setting[_]] = inConfig(Dalvik) Seq(
+  def dalvikSettings: Seq[Setting[_]] = Seq(
 
     dalvikvm <<= androidSource(_ / "out/host/linux-x86/bin/dalvikvm"),
 
     bootclasspath <<= androidSource(bootjars(_).get),
 
     androidRoot <<= androidSource(_ / "out/host/linux-x86/"),
-    lib <<= androidSrouce(_ / "out/target/product/generic_x86/system/lib/"),
+    lib <<= androidSource(_ / "out/target/product/generic_x86/system/lib/"),
     androidData <<= cacheDirectory(_ / "android-data" / "dalvik-cache"),
     environment in Dalvik := Seq(
       "ANDROID_PRINTF_LOG" -> "tag",
@@ -57,16 +58,31 @@ object DalvikPlugin extends sbt.Plugin {
       "LD_LIBRARY_PATH" -> "/var/android/lib",
       "DYLD_LIBRARY_PATH" -> "/var/android/lib"
     ),
+
+    options <<= (androidData) map {
+      (androidData: File) => {
+        val a = "-Duser.dir=/tmp/test/" :: "-Djava.io.tmpdir=/tmp/test/" :: "-Xbootclasspath::/var/android/bootjars/system/framework/framework.jar:/var/android/framework/core-hostdex.jar:/var/android/framework/bouncycastle-hostdex.jar:/var/android/framework/apache-xml-hostdex.jar" :: "-Duser.language=en" :: "-Duser.region=US" :: "-Xverify:none" :: "-Xdexopt:none" :: "-Xcheck:jni" :: "-Xjnigreflimit:2000" :: Nil
+        val d = a.toSeq
+        d
+      }
+    },
+
     dexDirectory <<= cacheDirectory(_ / "dex"),
-    runner in(Dalvik, run) := new DalvikRunner,
-    run <<= runInputTask(Dalvik, "", ""),
+
+    runner in(Dalvik, run) <<= (dalvikvm, options) map {
+      (dalvikvm: File, options: Seq[String]) =>
+        new DalvikRunner(dalvikvm, options)
+    },
+
+    run <<= runInputTask(Dalvik, "hellow", ""),
+
     fullClasspath in (Dalvik) <<= (fullClasspath in Runtime, dexDirectory, streams) map {
       (cp: Classpath, cache: File, s: TaskStreams) => {
         cp.filterNot((b: Attributed[File]) => b.data.toString.contains("android"))
         cp.map((a: Attributed[File]) => dex(a.data, cache)(s.log)).flatten
       }
     }
-    )
+  )
 
   def bootjars(base: File): PathFinder = (base / "out/target/product/generic_x86/dex_bootjars/system/framework/") ** "*.jar"
 
@@ -113,13 +129,13 @@ object DalvikPlugin extends sbt.Plugin {
 }
 
 
-class DalvikRunner extends sbt.ScalaRun {
+class DalvikRunner(dalvikvm: File, options: Seq[String]) extends sbt.ScalaRun {
 
   override def run(mainClass: String, classpath: Seq[File], options: Seq[String], log: sbt.Logger) = {
-    log.info("this" + mainClass)
+    log.info("this" + options.mkString)
     classpath.foreach(println)
     Process(
-      "/var/android/linux-x86/bin/dalvikvm" :: "-classpath" :: classpath.mkString(":")
+      dalvikvm.getAbsolutePath :: "-classpath" :: classpath.mkString(":")
         :: "-Duser.dir=/tmp/test/"
         :: "-Djava.io.tmpdir=/tmp/test/"
         :: "-Xbootclasspath::/var/android/bootjars/system/framework/framework.jar:/var/android/framework/core-hostdex.jar:/var/android/framework/bouncycastle-hostdex.jar:/var/android/framework/apache-xml-hostdex.jar"
